[package]
name = "robots"
version = "0.1.0"
edition = "2021"

# We use a custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"

[dependencies]
r2r = { git = "https://github.com/sequenceplanner/r2r.git" }
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
